--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -33,4 +33,5 @@ test-suite specs
   build-depends:       base ==4.5.*,
                        hspec,
                        gnome-citadel,
-                       QuickCheck
+                       QuickCheck,
+                       containers
