--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -13,25 +13,32 @@ data-files:            tiles/*.png
 
 library
   hs-source-dirs:      src
-  other-modules:       Types
-  Build-depends:       base ==4.5.*,
+  ghc-options:         -Wall -Werror
+  exposed-modules:     Types,
+                       Tile,
+                       Task,
+                       Level,
+                       Actor,
+                       Renderable,
+                       StaticElement
+  Build-depends:       base ==4.*,
                        containers,
                        lens
   
 executable sdl-test
   hs-source-dirs:      test
   main-is:             Game/SDLTest.hs
-  build-depends:       base ==4.5.*,
+  build-depends:       base ==4.*,
                        SDL,
                        SDL-image
 
 test-suite specs
   type:                exitcode-stdio-1.0
   ghc-options:         -Wall -Werror
-  hs-source-dirs:      src, test
+  hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base ==4.5.*,
+  build-depends:       base ==4.*,
+                       containers,
                        hspec,
                        gnome-citadel,
-                       QuickCheck,
-                       containers
+                       QuickCheck
