--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 before_install:
   - sudo apt-get -y -qq install libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev
+
 language: haskell
+
+notifications:
+  irc: "chat.freenode.net##gnome-citadel"
