--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -41,7 +41,7 @@ test-suite specs
   main-is:             Spec.hs
   build-depends:       base ==4.*,
                        containers,
-                       hspec,
+                       hspec == 1.6.*,
                        gnome-citadel,
                        QuickCheck,
                        mtl,
