--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -21,11 +21,13 @@ library
                        Actor,
                        Renderable,
                        StaticElement,
-                       Queue
+                       Queue,
+                       Path
   Build-depends:       base ==4.*,
                        containers,
                        lens,
-                       mtl
+                       mtl,
+                       PSQueue == 1.1.*
 
 executable sdl-test
   hs-source-dirs:      test
