--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -27,7 +27,8 @@ library
                        containers,
                        lens,
                        mtl,
-                       PSQueue == 1.1.*
+                       PSQueue == 1.1.*,
+                       data-default == 0.5.*
 
 executable sdl-test
   hs-source-dirs:      test
