Add the PathFinder type
The PathFinder is a newtype that makes use of a ReaderT and StateT
transformer to allow access to the PathFinderState and PathFinderConfig
ADT, respectively.

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -28,6 +28,7 @@ library
                        lens,
                        mtl,
                        PSQueue == 1.1.*,
+                       transformers == 0.3.*,
                        data-default == 0.5.*
 
 executable sdl-test
