Extend PathFinder with visit and expand functions
Some new methods:

- expand: Retrieve all possible neighbors of a cell
- expandUnvisited: expand and filter by visit status
- alreadyVisited: check if the cell has already been visited
- visit: perform the state effects necessary when visiting a cell

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -49,4 +49,5 @@ test-suite specs
                        gnome-citadel,
                        QuickCheck,
                        mtl,
-                       lens
+                       lens,
+                       data-default == 0.5.*
