Separate public and private path finding API
Instead of exposing all 'internal' functions that e.g. make use of the
path finder monad, I separated the plumbing into a new module
Path.Internal.  This allows us to test the internal methods without
burdening all clients of 'Path' with the large interface of functions.

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -22,7 +22,8 @@ library
                        Renderable,
                        StaticElement,
                        Queue,
-                       Path
+                       Path,
+                       Path.Internal
   Build-depends:       base ==4.*,
                        containers,
                        lens,
