--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -30,7 +30,8 @@ library
                        mtl,
                        PSQueue == 1.1.*,
                        transformers == 0.3.*,
-                       data-default == 0.5.*
+                       data-default == 0.5.*,
+                       deepseq == 1.3.*
 
 executable sdl-test
   hs-source-dirs:      test
@@ -53,3 +54,13 @@ test-suite specs
                        lens,
                        data-default == 0.5.*,
                        PSQueue == 1.1.*
+
+benchmark a-star-bench
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   bench
+  main-is:          AStarBench.hs
+  build-depends:    base,
+                    criterion,
+                    gnome-citadel
+  ghc-options:      -Wall
+                    -O2
