--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -22,6 +22,7 @@ library
                        Renderable,
                        StaticElement,
                        Queue,
+                       Coords,
                        Path,
                        Path.Internal
   Build-depends:       base ==4.*,
