Added execution scheduler

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -21,6 +21,7 @@ library
                        Actor,
                        Renderable,
                        StaticElement,
+                       Scheduler,
                        Queue,
                        Coords,
                        Path,
