--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -22,6 +22,7 @@ library
                        Renderable,
                        StaticElement,
                        Scheduler,
+                       Unfold,
                        Queue,
                        Coords,
                        Path,
