Added Level commands like move or approach

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -18,10 +18,10 @@ library
                        Tile,
                        Task,
                        Level,
+                       Level.Commands,
                        Actor,
                        Renderable,
                        StaticElement,
-                       Scheduler,
                        Unfold,
                        Queue,
                        Coords,
