moved task related functions from Level.hs to Level/Task.hs

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -18,6 +18,7 @@ library
                        Tile,
                        Task,
                        Level,
+                       Level.Task,
                        Actor,
                        Renderable,
                        StaticElement,
