Changed commands with exactly one step to LevelTrans
This allows better composability.

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -18,8 +18,9 @@ library
                        Tile,
                        Task,
                        Level,
-                       Level.Commands,
-                       Level.CommandScheduler,
+                       Level.Transformation,
+                       Level.Command,
+                       Level.Scheduler,
                        Level.Task,
                        Actor,
                        Renderable,
