Add module TaskManagement
The module provides the TaskManager data type and associated functions

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -30,7 +30,8 @@ library
                        Queue,
                        Coords,
                        Path,
-                       Path.Internal
+                       Path.Internal,
+                       TaskManagement
   Build-depends:       base ==4.*,
                        containers,
                        lens,
