Extracted fresh id generation functionality into Counter.hs

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -22,6 +22,7 @@ library
                        Level.Command,
                        Level.Scheduler,
                        Actor,
+                       Counter,
                        Renderable,
                        StaticElement,
                        Scheduler,
