Refactoring: Removed some of the state complexity

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -31,7 +31,8 @@ library
                        Coords,
                        Path,
                        Path.Internal,
-                       TaskManagement
+                       TaskManagement,
+                       Utils
   Build-depends:       base ==4.*,
                        containers,
                        lens,
