Extend task type
Currently doing: TaskManager specs

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -21,6 +21,7 @@ library
                        Level.Transformation,
                        Level.Command,
                        Level.Scheduler,
+                       Level.Task,
                        Actor,
                        Counter,
                        Renderable,
