--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -14,8 +14,7 @@ data-files:            tiles/*.png
 library
   hs-source-dirs:      src
   ghc-options:         -Wall -Werror
-  exposed-modules:     Types,
-                       Tile,
+  exposed-modules:     Tile,
                        Task,
                        Level,
                        Level.Transformation,
