--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -32,15 +32,25 @@ library
                        Path,
                        Path.Internal,
                        TaskManagement,
-                       Utils
+                       Utils,
+                       TestHelper,
+                       TestTiles
   Build-depends:       base ==4.*,
                        containers,
                        lens,
                        mtl,
-                       PSQueue == 1.1.*,
-                       transformers == 0.3.*,
-                       data-default == 0.5.*,
-                       deepseq == 1.3.*
+                       PSQueue,
+                       transformers,
+                       data-default,
+                       deepseq
+
+executable gnome-citadel
+  hs-source-dirs:      ui, test
+  ghc-options:         -Wall -Werror
+  Build-depends:       base ==4.*,
+                       gnome-citadel,
+                       vty == 4.7.3
+  main-is:             Main.hs
 
 test-suite specs
   type:                exitcode-stdio-1.0
