Schedule inactive tasks

--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -45,12 +45,12 @@ library
 
 executable gnome-citadel
   hs-source-dirs:      ui, test
-  ghc-options:         -Wall -Werror
+  ghc-options:         -Wall
   Build-depends:       base ==4.*,
                        gnome-citadel,
                        vty == 4.7.3,
                        lens,
-                       text
+                       data-default
   main-is:             Main.hs
 
 test-suite specs
