--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 before_install:
+  - cabal install cabal-install
+  - cabal sandbox init
   - sudo apt-get update
   - sudo apt-get -y -qq install libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev
 
