--- a/gnome-citadel.cabal
+++ b/gnome-citadel.cabal
@@ -34,20 +34,20 @@ library
                      , Tile
                      , Unfold
                      , Utils
-  Build-depends:       PSQueue
-                     , base ==4.*
-                     , containers
-                     , data-default
-                     , deepseq
+  Build-depends:       PSQueue >= 1.1 && < 1.2
+                     , base == 4.*
+                     , containers >= 0.5 && < 0.6
+                     , data-default >= 0.5 && < 0.6
+                     , deepseq >= 1.3 && < 1.4
                      , lens >= 4.4 && < 4.5
-                     , mtl
+                     , mtl >= 2.1 && < 2.3
                      , transformers == 0.3.*
 
 executable gnome-citadel
   hs-source-dirs:      ui, test
   ghc-options:         -Wall -threaded
-  Build-depends:       base ==4.*
-                     , data-default
+  Build-depends:       base == 4.*
+                     , data-default >= 0.5 && < 0.6
                      , gnome-citadel
                      , lens >= 4.4 && < 4.5
                      , vty >= 5.2 && < 5.3
@@ -58,23 +58,23 @@ test-suite specs
   ghc-options:         -Wall
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       PSQueue == 1.1.*
+  build-depends:       PSQueue >= 1.1 && < 1.2
                      , QuickCheck
-                     , base ==4.*
-                     , containers
+                     , base == 4.*
+                     , containers >= 0.5 && < 0.6
                      , data-default == 0.5.*
                      , gnome-citadel
                      , hspec >= 1.9
                      , lens >= 4.4 && < 4.5
-                     , mtl
-                     , transformers == 0.3.*
+                     , mtl >= 2.1 && < 2.3
+                     , transformers >= 0.3 && < 0.4
 
 benchmark a-star-bench
   type:             exitcode-stdio-1.0
   hs-source-dirs:   bench/astar
   main-is:          AStarBench.hs
-  build-depends:    base
-                  , criterion
+  build-depends:    base == 4.*
+                  , criterion >= 1.0 && < 1.1
                   , gnome-citadel
   ghc-options:      -Wall
                     -O2
@@ -83,11 +83,10 @@ benchmark task-scheduling
   type:             exitcode-stdio-1.0
   hs-source-dirs:   bench/task-scheduling
   main-is:          TaskScheduling.hs
-  build-depends:    base
-                  , criterion
-                  , deepseq
+  build-depends:    base == 4.*
+                  , criterion >= 1.0 && < 1.1
                   , gnome-citadel
-                  , lens
-                  , mtl
+                  , lens >= 4.4 && < 4.5
+                  , mtl >= 2.1 && < 2.3
   ghc-options:      -Wall
                     -O2
